--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "datejs": "0.0.2",
     "del": "^6.0.0",
     "fullcalendar": "^3.10.2",
+    "inputmask": "^5.0.8",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.0",
     "moment": "^2.29.1",
