--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         }
     },
     "require": {
+        "jorgeingresa/AgendaSAC": "^2.0",
         "php": ">=7.3",
         "ext-curl": "*",
         "ext-json": "*",
